apps/example/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: whoami
        image: containous/whoami:v1.5.0
        resources:
          requests:
            cpu: 0.1m
            memory: 50Mi
          limits:
            cpu: 0.1m
            memory: 50Mi
        ports:
          - name: http
            containerPort: 80
